<resources>
    <string name="default_web_client_id">151748741484-15171ppb5v95mnc5atgo5ma0kch1je60.apps.googleusercontent.com</string>
    <string name="app_name">final_blackjack</string>
    <string name="dropdown_startgame">Start Game</string>
    <string name="dropdown_settings">Settings</string>
    <string name="dropdown_historymatch">Match History</string>
    <string name="dropdown_topscores">Top Scores</string>
    <string name="dropdown_information">Information</string>
    <string name="dropdown_exit">Exit</string>
    <string name="mainmenu_title">Main Menu</string>
    <string name="blackjack_menutitle">BlackJack</string>
    <string name="blackjack_points">Points: </string>
    <string name="blackjack_startingpoints">Points: 1000</string>
    <string name="blackjack_bet">Current Bet: </string>
    <string name="blackjack_startingbet">Current Bet: 0</string>
    <string name="blackjack_makeabetError">Please, make a bet</string>
    <string name="blackjack_exitmessage">Are you sure you want to exit?</string>
    <string name="blackjack_hit">HIT</string>
    <string name="blackjack_stay">STAY</string>
    <string name="blackjack_yes">Yes</string>
    <string name="blackjack_cancel">Cancel</string>
    <string name="blackjack_win">You win!</string>
    <string name="blackjack_loose">You loose!</string>
    <string name="blackjack_errorloadingimage">This image can not be loaded: </string>
    <string name="blackjack_tie">Tie!</string>
    <string name="blackjack_newmaxscore">You have set a new max score in BlackJack!</string>
    <string name="blackjack_closebet">CLOSE BET</string>
    <string name="blackjack_restartbet">ERASE BET</string>
    <string name="blackjack_restart">PLAY ANOTHER HAND</string>
    <string name="lose_menutitle">End Screen</string>
    <string name="lose_maxpuntuationtext">Max score in this game: </string>
    <string name="lose_text">You do not have any points left. Do you want to play again?</string>
    <string name="lose_yes">YES</string>
    <string name="lose_no">NO</string>
    <string name="lose_screenshot">Screenshot</string>
    <string name="settings_menutitle">Settings</string>
    <string name="settings_buttonSelectMusic">Select Music</string>
    <string name="settings_buttonEnglish">English</string>
    <string name="settings_buttonSpanish">Spanish</string>
    <string name="matchHistory_menutitle">Match History</string>
    <string name="information_menutitle">How to play</string>

</resources>