<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_start_game"
        android:title="@string/dropdown_startgame"/>
    <item
        android:id="@+id/action_options"
        android:title="@string/dropdown_settings"/>
    <item
        android:id="@+id/action_history"
        android:title="@string/dropdown_historymatch"/>
    <item
        android:id="@+id/action_top_scores"
        android:title="@string/dropdown_historymatch"/>
    <item
        android:id="@+id/action_information"
        android:title="@string/dropdown_information"/>

    <item
        android:id="@+id/action_exit"
        android:title="@string/dropdown_exit"/>
</menu>