<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blackjack_startingpoints"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <!-- Texto de la apuesta actual -->
    <TextView
        android:id="@+id/currentBetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blackjack_startingbet"
        android:visibility="gone"
        android:layout_gravity="center"/>
    <!-- Dealer cards -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/dealerCard1View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/dealerCard2View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/dealerCard3View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/dealerCard4View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/dealerCard5View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/dealerCard6View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

    </LinearLayout>

    <!-- Player cards -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/playerCard1View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/playerCard2View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/playerCard3View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/playerCard4View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/playerCard5View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

        <ImageView
            android:id="@+id/playerCard6View"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_margin="4dp" />

    </LinearLayout>

    <!-- Result and buttons -->
    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/hitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/blackjack_hit" />

        <Button
            android:id="@+id/stayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackjack_stay" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:gravity="center">
        <Button
            android:id="@+id/closeBetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackjack_closebet"
            android:layout_centerInParent="true"
            android:layout_margin="10dp">

        </Button>
        <Button
            android:id="@+id/restartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackjack_restart"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/resetBetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackjack_restartbet"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_margin="10dp">
        </Button>

    </LinearLayout>


    <!-- Botón para reiniciar la apuesta -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center">


        <ImageView
            android:id="@+id/chipView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp" />

        <ImageView
            android:id="@+id/chipView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp" />

        <ImageView
            android:id="@+id/chipView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp" />
    </LinearLayout>
</LinearLayout>
